# water-potability-mlops

./: Dockerfile  LICENSE  Makefile  README.md  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yaml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: dagshub_test.py  exp1.py  exp2.py  exp3.py  exp4.py
reports/: run_info.json
req_for_docker/: requirements.txt
src/: __init__.py  data_collection.py  data_prep.py  dataset.py  features.py  plots.py
src/modeling/: model_building.py  model_evaluation.py  model_prediction.py  model_register.py  predict.py  train.py
